extractor/tests/snapshots/test_inputs__failing__missing_fields.lua-stderr.snap
---
source: tests/test-inputs.rs
expression: stderr
---
error: Field "HTTP" does not actually exist in interface
  ┌─ test-input/failing/missing_fields.lua:5:12
  │
5 │ --- @field HTTP -- True for database related errors.
  │            ^^^^ Field "HTTP" does not actually exist in interface

error: aborting due to diagnostic error
